--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
   </head>
 
   <body>
+    <% if false %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+    <%= render "devise/shared/sign_out" %>
     <%= yield %>
   </body>
 </html>
