--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @post %>
 
 <div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
-
-  <%= button_to "Destroy this post", @post, method: :delete %>
+  <% if @post.author == current_user %>
+    <%= button_to "Delete this post", @post, method: :delete %>
+  <% end %>
 </div>
