--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,10 +1,10 @@
 <div id="<%= dom_id(post, :like) %>">
   <% if post.likers.include?(current_user) %>
-    <%= button_to dislike_path(post), method: :delete, class: "like-button-background" do %>
+    <%= button_to dislike_path(post), method: :delete, class: "engagement-button-background" do %>
       <i class="bi bi-heart-fill"></i> <%= post.likers.count %>
     <% end %>
   <% else %>
-    <%= button_to like_path(post), method: :post, class: "like-button-background" do %>
+    <%= button_to like_path(post), method: :post, class: "engagement-button-background" do %>
       <i class="bi bi-heart"></i> <%= post.likers.count %>
     <% end %>
   <% end %>
