--- a/app/views/users/_follow_button.html.erb
+++ b/app/views/users/_follow_button.html.erb
@@ -3,13 +3,14 @@
   <% follow_object = Follow.find_by(follower_id: current_user.id, followee_id: user.id) %>
   <% follow_helper_method = follow_object ? follow_path(follow_object.id) : create_follow_request_path(user.id) %>
   <% rest_method = follow_object ? :delete : :post %>
+  <% data_hash = follow_object ? {
+                                    controller: "follow-button",
+                                    action: "mouseover->follow-button#hover mouseleave->follow-button#reset"
+                                  } : {} %>
   <% css_class = follow_object ? "unfollow_button" : "follow-request-button" %>
 
   <%= button_to follow_helper_method,
-                data: {
-                        controller: "follow-button",
-                        action: "mouseover->follow-button#hover mouseleave->follow-button#reset"
-                      },
+                data: data_hash,
                 method: rest_method,
                 class: "follow-button #{css_class}" do %>
     <%= follow_button_text(follow_object) %>
