--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,18 +4,16 @@
                                                                      comment_form_modal: modal }) do |form| %>
   <% if comment.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-      <ul>
-        <% comment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+   
+      <% comment.errors.each do |error| %>
+        <div><%= error.full_message %></div>
+      <% end %>
+    
     </div>
   <% end %>
 
   <div>
-    <%= form.text_field :content, placeholder: "Post your reply", autofocus: modal ? true : false %>
+    <%= form.text_field :content, placeholder: "Post your reply", autofocus: modal ? true : false, required: true %>
   </div>
  
   <%= form.submit "Reply" %>
