--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <%= turbo_frame_tag "comment-modal" %>
 
     <%= render "layouts/toast" %>
-   
+    <%= render "layouts/navbar" %>
     <%= render "devise/shared/sign_out" %>
     <%= yield %>
   </body>
