--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<div class="avatar show-user-avatar">
+  <%= image_tag(gravatar_avatar_url(@user.email)) %>
+</div>
 <div class="username profile-page-username">
   <%= @user.username %>
 </div>
