Implement Welcome Email mailer method
  - Send the welcome email upon user registration
  - Basic styling
  - Tested with Letter Opener gem

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style>
-      /* Email styles need to be inline */
-    </style>
+    <%= stylesheet_link_tag "mailers" %>
   </head>
 
-  <body>
+  <body style="background-color: white; display: flex; justify-content: center;">
     <%= yield %>
   </body>
 </html>
