Enable user to upload profile picture
  - Add "edit" button which on click opens file upload window
  - Implement form submission on file selection
  - Write update function to store the picture in the active storage

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,6 +2,7 @@
   <nav>
     <ul>
       <li><%= link_to "Other users", users_path %></li>
+      <li><%= link_to "Profile", profile_path(current_user.username) %></li>
     </ul>
   </nav>
 <% end %>
