--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,5 +1,28 @@
 <% if notification.notifiable_type == 'Like' %>
+
   <%= link_to user_post_path(notification.recipient, notification.notifiable.post) do %>
     <p>User <%= notification.submitter.username %> has liked your post.</p>
   <% end %>
+
+<% elsif notification.notifiable_type == "Comment" %>
+
+  <%= link_to user_post_path(notification.recipient, notification.notifiable.post) do %>
+    <p>User <%= notification.submitter.username %> has commented on your post.</p>
+  <% end %>
+
+<% elsif notification.notifiable_type == "Follow" %>
+
+  <p>User <%= link_to notification.submitter.username %> has sent you a follow request.</p>
+  
+  <div class="user-item-request" id="user_<%= notification.notifiable.follower.username.parameterize %>">
+
+    <%= image_tag(gravatar_avatar_url(notification.notifiable.follower.email)) %>
+    <%= link_to notification.notifiable.follower.username, profile_path(notification.notifiable.follower.username) %>
+
+    <span id="follow_<%= notification.notifiable.follower_id %>" class="request-action">
+      <%= render "posts/incoming_requests_buttons", request: notification.notifiable %>
+    </span>
+    
+  </div>
+
 <% end %>
