--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,7 @@
 
 @import "bootstrap";
 
-form.button_to .engagement-button-background,
-.notifications-button {
+form.button_to .engagement-button-background {
   background-color: unset;
   border: none;
 }
@@ -104,7 +103,21 @@ button {
 }
 
 .notifications-container {
-  background-color: lightgrey;
   border: 1px solid grey;
 }
 
+.notifications-button {
+  background-color: unset;
+  border: none;
+  position: relative;
+}
+
+.icon-size {
+  font-size: 1.65rem;
+}
+
+.notifications-button span {
+  font-size: 0.9rem;
+  position: absolute;
+  right: 2px;
+}
