--- a/app/views/posts/_incoming_requests_buttons.html.erb
+++ b/app/views/posts/_incoming_requests_buttons.html.erb
@@ -1,13 +1,17 @@
-<span>
-  <%= button_to follow_path(request.id),
-                method: :patch do %>
-    Accept
-  <% end %>
-</span>
+<% if request.status == "pending" %> 
+  <span>
+    <%= button_to follow_path(request.id),
+                  method: :patch do %>
+      Accept
+    <% end %>
+  </span>
 
-<span>
-  <%= button_to follow_path(request.id),
-                method: :delete do %>
-    Decline
-  <% end %>
-</span>
+  <span>
+    <%= button_to follow_path(request.id),
+                  method: :delete do %>
+      Decline
+    <% end %>
+  </span>
+<% else %>
+  Request accepted
+<% end %>
