--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,8 @@
 </div>
 <%= link_to "New post", new_post_path %>
 
-<div id="incoming-requests-sidebar">
-  <%= render "incoming_pending_requests", incoming_follow_requests: @incoming_follow_requests %>
-</div>
+<% if false %>
+  <div id="incoming-requests-sidebar">
+    <%= render "incoming_pending_requests", incoming_follow_requests: @incoming_follow_requests %>
+  </div>
+<% end %>
