--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,14 @@
 <% if user_signed_in? %>
+  <%= turbo_stream_from current_user %>
   <nav>
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Other users", users_path %></li>
       <li><%= link_to "Profile", profile_path(current_user.username) %></li>
       <li>
-        <%= link_to notifications_path do %>
+        <%= link_to notifications_path, data: {turbo_prefetch: false} do %>
           <button class="notifications-button">
             <i class="bi bi-bell icon-size"></i>
-            <%= turbo_stream_from current_user %>
             <%= render "notifications/notifications_counter" %>        
           </button>
           Notifications
