--- a/app/views/notifications/_notifications_counter.html.erb
+++ b/app/views/notifications/_notifications_counter.html.erb
@@ -1,3 +1,3 @@
 <span id="notification-counter">
-  <%= current_user.notifications.unread.count > 0 ? current_user.notifications.count : '' %>
+  <%= current_user.notifications.unread.count > 0 ? current_user.notifications.unread.count : '' %>
 </span>
