--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render post %>
+    <%= render partial: "post", locals: { post: post, user: current_user } %>
   <% end %>
 </div>
 <%= link_to "New post", new_post_path %>
