Implement Chat feature   - Generate all neccessary models and set     associations   - Install bulma gem   - Generate Chat channel   - Write UI and implement logic for chat

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,13 @@
   <%= render "follow_button", user: @user %>
 </div>
 
+<div class="message-button-container">
+  <%= render "message_button", chat: @chat, user: @user %>
+</div>
+
+
+
+
 <div class="profile-page-posts">
   <% @user.posts.each do |post| %>
     <%= render "posts/post", post: post, user: current_user %>
