--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // Sassy
-
+@use "bulma";
 @import "bootstrap";
 
 form.button_to .engagement-button-background {
@@ -106,7 +106,7 @@ button {
   border: 1px solid grey;
 }
 
-.notifications-button {
+.nav-button {
   background-color: unset;
   border: none;
   position: relative;
@@ -116,8 +116,37 @@ button {
   font-size: 1.65rem;
 }
 
-.notifications-button span {
+.nav-button span {
   font-size: 0.9rem;
   position: absolute;
   right: 2px;
+}
+
+.conversation-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.conversation-container > .recipient-message {
+  align-self: flex-start;
+  background-color: lightgrey;
+}
+
+.conversation-container > .sender-message {
+  align-self: flex-end;
+  background-color: lightblue;
+}
+
+.chats-container {
+  display: flex;
+}
+
+.conversation-container {
+  height: 80vh;
+  overflow: auto
+}
+
+#message-input {
+  width: 60vw;
 }
