--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,19 +1,27 @@
 <% if user_signed_in? %>
   <%= turbo_stream_from current_user %>
-  <nav>
-    <ul>
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Other users", users_path %></li>
-      <li><%= link_to "Profile", profile_path(current_user.username) %></li>
-      <li>
-        <%= link_to notifications_path, data: {turbo_prefetch: false} do %>
-          <button class="notifications-button">
+  <nav class="navbar" role="navigation" aria-label="main navigatio">
+    <div class="navbar-end">
+      <div class="buttons">
+        <%= link_to "Home", root_path, class: 'button is-link' %>
+        <%= link_to "Other users", users_path, class: 'button is-link' %>
+        <%= link_to "Profile", profile_path(current_user.username), class: 'button is-link' %>
+        <%= link_to notifications_path, data: {turbo_prefetch: false}, class: 'button is-link' do %>
+          <button class="nav-button">
             <i class="bi bi-bell icon-size"></i>
-            <%= render "notifications/notifications_counter" %>        
+            <%= render "notifications/notifications_counter" %>
           </button>
           Notifications
         <% end %>
-      </li>
-    </ul>
+        <%= link_to chats_path, data: {turbo_prefetch: false}, class: 'button is-link' do %>
+          <button class="nav-button">
+            <i class="bi bi-chat-square-text icon-size"></i>
+            <%= render "messages/messages_counter" %>
+          </button>
+          Messages
+        <% end %>
+        <%= render "devise/shared/sign_out" %>
+      </div>
+    </div>
   </nav>
 <% end %>
